Fix text size & spacing

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -513,6 +513,7 @@
   box-shadow: $box-shadow;
 
   .nav__title {
+    margin: 0;
     color: #fff;
     font-size: $type-size-6;
     background: $primary-color;
